--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.2",
     "fakerphp/faker": "^1.23",
+    "gedmo/doctrine-extensions": "^3.16",
     "lexik/jwt-authentication-bundle": "^3.1",
     "nelmio/api-doc-bundle": "^4.29",
     "symfony/asset": "7.1.*",
